--- a/app/src/main/res/layout/activity_top_artists.xml
+++ b/app/src/main/res/layout/activity_top_artists.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vista.TopArtists">
+    tools:context=".Vista.VistaTopArtists">
 
     <com.denzcoskun.imageslider.ImageSlider
         android:id="@+id/imagen_slider"
