REFACTORIZACIÓN – Ajuste archivos faltantes.
* Se sube archivos faltantes de commit d71dec5d78, ya que se subió por error y hacía falta subirlo.

--- a/app/src/main/res/drawable/icon_music.xml
+++ b/app/src/main/res/drawable/icon_music.xml
@@ -21,7 +21,7 @@
       android:fillType="evenOdd"/>
   <path
       android:pathData="M143.04,90.12c7.11,7.48 11.4,16.59 13.65,26.61a165.16,165.16 0,0 0,-17 24.47c6.45,-2.68 13.81,-4.36 20.85,-3.7 21.93,2.04 42.69,21.53 44.41,43.91 3.55,-4.49 7.28,-8.83 10.92,-13.25 2.33,-2.82 4.39,-5.94 6.98,-8.54 -3.47,-6.11 -3.09,-13.55 -2.52,-20.29 1.24,-14.71 5.98,-30.71 13.86,-43.38 -4.62,1.36 -10.47,3.2 -15.31,1.92 -6.16,-1.63 -9,-7.2 -4.69,-12.45C206.6,82.38 198.08,81.93 190,81.8a123.69,123.69 0,0 0,-47.88 8.76"
-      android:fillColor="#ff7979"
+      android:fillColor="#870202"
       android:fillType="evenOdd"/>
   <path
       android:fillColor="#FF000000"
@@ -32,7 +32,7 @@
       android:pathData="M236.14,62.81a2.41,1.53 114.52,1 0,2 -4.39a2.41,1.53 114.52,1 0,-2 4.39z"/>
   <path
       android:pathData="M275.62,149.55c3.71,-9.99 1.01,-21.16 -3.87,-30.23 -2.14,-3.97 -7.08,-8.91 -11.97,-9.04 -1.37,9.77 -2.61,19.77 -5.07,29.34 7.29,0.19 15.98,4.13 20.37,10.1"
-      android:fillColor="#ff7979"
+      android:fillColor="#870202"
       android:fillType="evenOdd"/>
   <path
       android:fillColor="#FF000000"
@@ -193,47 +193,47 @@
       android:fillType="evenOdd"/>
   <path
       android:pathData="M90.07,93.67l0.6,0.32 0.24,0.5v0.01l-0.28,0.48 -0.63,0.28a49.21,49.21 0,0 1,-5.45 0.58c-18.91,-0.22 -19.36,-0.34 -23.48,-1.33 -0.3,-0.07 -0.09,0.03 -0.87,-0.46l-0.22,-0.63v-0.01l0.34,-0.58c0.91,-0.36 0.41,-0.26 1.62,-0.33 7.13,-0.24 -0.76,-0.15 14.01,0.19C85.93,92.82 85.31,92.66 90.07,93.67Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#C14242"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M90.14,108.28l0.55,0.33 0.18,0.55 0,0.01c-0.53,0.86 0.32,0.69 -7.11,0.63 -3.42,-0.01 -3.39,-0.14 -11.12,-0.43 -4.43,-0.17 -13.05,-0.35 -17.44,-0.54 -13.38,-0.6 -13.14,-1.15 -18.19,-2.06l0,-0.01 -0.62,-0.4 -0.19,-0.68v-0.01l0.37,-0.59c0.85,-0.26 0.6,-0.23 1.13,-0.2C74.7,107 77.47,105.52 90.14,108.28Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#C14242"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M85.43,119.21l0.72,0.91 -0.94,0.67c-0.36,0.01 -3.17,0.18 -3.44,0.16 -3.48,0.05 -4.88,-0.59 -17.51,-0.3a31.06,31.06 0,0 1,-6.4 -0.37c-0.12,-0.02 0.02,0.02 -0.73,-0.33l-0.3,-0.6v-0.01l0.26,-0.61 0.66,-0.37a49.48,49.48 0,0 1,4.94 -0.69C79.05,117.28 81.49,117.83 85.43,119.21Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#C14242"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M78.86,56.12 L56.9,65.58l1.21,-21.36Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#020202"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M67.71,47.98c3.42,2.07 4.75,2.89 11.55,7.45a0.8,0.8 0,0 1,0.36 0.94,0.79 0.79,0 0,1 -0.44,0.49c-0.27,-0.63 -0.57,-1.33 0.06,0.15 -6.42,3.22 -8.85,4.35 -12.03,5.79 -10.69,4.61 -9.81,4.32 -10.47,4.3a1.52,1.52 0,0 1,-0.91 -0.43,1.5 1.5,0 0,1 -0.44,-0.91c-0.01,-0.37 0.16,-3.13 1.21,-21.62a1.5,1.5 0,0 1,0.38 -0.93,1.54 1.54,0 0,1 0.89,-0.48C58.75,42.66 58.02,42.42 67.71,47.98ZM58.55,63.22c8.28,-3.57 9.04,-3.98 18.07,-7.3 -8.67,-4.19 -10,-5.07 -17.14,-9.16Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#020202"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M22.53,52.92 L43.29,64.81 44.5,43.45Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#020202"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M44.91,41.99a1.54,1.54 0,0 1,0.83 0.58,1.5 1.5,0 0,1 0.28,0.97c-1.32,23.26 -1.14,21.51 -1.45,22.09a1.51,1.51 0,0 1,-1.8 0.61c-0.33,-0.15 0.8,0.49 -9.41,-5.37 -2.98,-1.78 -5.24,-3.16 -11.3,-7.11 0.15,-0.26 0.08,-0.02 -0.2,-0.42a0.8,0.8 0,0 1,0.14 -0.99c0.48,-0.38 8.33,-4.26 8.45,-4.32 3.83,-1.83 2.41,-1.19 13.46,-5.95A1.53,1.53 0,0 1,44.91 41.99ZM24.78,52.97c8.5,4.28 8.93,4.6 17.13,9.3l0.94,-16.46C35.04,49.18 33.85,49.8 24.78,52.97Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#020202"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M109.38,57.85 L87.41,67.32l1.21,-21.36Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#020202"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M98.23,49.71c3.42,2.07 4.75,2.89 11.55,7.45a0.8,0.8 0,0 1,-0.08 1.42c-0.27,-0.63 -0.57,-1.33 0.06,0.15 -6.42,3.22 -8.85,4.35 -12.03,5.79 -10.69,4.61 -9.81,4.32 -10.47,4.3a1.54,1.54 0,0 1,-0.91 -0.43,1.5 1.5,0 0,1 -0.44,-0.91c-0.01,-0.37 0.16,-3.13 1.21,-21.62a1.51,1.51 0,0 1,0.38 -0.93,1.55 1.55,0 0,1 0.89,-0.48C89.26,44.4 88.53,44.16 98.23,49.71ZM89.07,64.96c8.28,-3.57 9.04,-3.98 18.07,-7.3 -8.67,-4.19 -10,-5.07 -17.14,-9.16Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#020202"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M20.19,56.27c0.5,-11.89 0.45,-12.78 1.03,-15.41 0.45,-2 0.24,-1.41 0.76,-2.26l0.62,-0.24h0.01l0.58,0.32c0.32,0.75 0.29,0.63 0.31,0.74 0.38,4.62 0.29,3.52 0.05,8.87 -0.58,13.31 -0.29,12.42 -1.54,17.01l-0.86,0.82 -0.73,-0.93C19.84,60.71 19.96,61.36 20.19,56.27Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#020202"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M111.51,43.9c0.39,0.94 0.26,0.3 0.41,2.34 0.21,2.94 -0.03,3 -0.82,15.9a29.09,29.09 0,0 1,-0.8 6.71,6.89 6.89,0 0,1 -0.79,2.37l-0.48,0.3h-0.01l-0.44,-0.36 -0.28,-0.81c-0.61,-4.24 -0.49,-4.07 -0.14,-9.76 0.82,-12.92 0.75,-12.15 1.72,-16.12 0.03,-0.12 -0.01,-0.01 0.42,-0.69l0.63,-0.23h0.01Z"
-      android:fillColor="#ff7979"
+      android:fillColor="#020202"
       android:fillType="evenOdd"/>
   <path
       android:fillColor="#FF000000"
