--- a/app/src/main/res/layout/item_top_artists.xml
+++ b/app/src/main/res/layout/item_top_artists.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="210dp"
+        android:layout_width="200dp"
         android:layout_height="280dp"
         android:background="@color/black"
         android:orientation="horizontal"
@@ -35,6 +35,8 @@
             android:id="@+id/numbArtis"
             android:layout_width="168dp"
             android:layout_height="30dp"
+            android:textSize="15dp"
+            android:textStyle="bold"
             android:gravity="center"/>
     </RelativeLayout>
 
@@ -43,7 +45,7 @@
         android:layout_height="120dp"
         android:padding="1dp"
         android:layout_marginRight="20dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="5dp"
         android:gravity="center">
@@ -78,17 +80,18 @@
             android:layout_width="150dp"
             android:layout_height="20dp"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="45dp"/>
+            android:layout_marginStart="45dp"
+            android:textSize="10dp"/>
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         android:padding="1dp"
         android:layout_marginRight="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="5dp">
 
     <ImageView
         android:layout_width="25dp"
@@ -101,9 +104,11 @@
         <TextView
             android:id="@+id/url"
             android:layout_width="150dp"
-            android:layout_height="20dp"
+            android:layout_height="40dp"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="45dp"/>
+            android:layout_marginStart="45dp"
+            android:textSize="10dp"
+            android:textColor="#1557C5"/>
     </RelativeLayout>
 
     </LinearLayout>
