--- a/app/src/main/res/layout/activity_vista_songs.xml
+++ b/app/src/main/res/layout/activity_vista_songs.xml
@@ -23,7 +23,7 @@
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:fontFamily="serif-monospace"
+            android:fontFamily="sans-serif-smallcaps"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="20dp"
